err/underverse.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jsonpickle'...
Listing './lib/python3.5/site-packages/jsonpickle/ext'...
Listing './lib/python3.5/site-packages/jsonpickle-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/underverse'...
Compiling './lib/python3.5/site-packages/underverse/__init__.py'...
***   File "./lib/python3.5/site-packages/underverse/__init__.py", line 421
    raise AttributeError, "Attribute not found: '%s'" % str(attrs[0])
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/underverse/model.py'...
***   File "./lib/python3.5/site-packages/underverse/model.py", line 401
    raise ValueError, "Limit predicates must be integers: limit(5)"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/underverse/predicates.py'...
***   File "./lib/python3.5/site-packages/underverse/predicates.py", line 274
    raise TypeError, "Orderby arguments must be strings"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/underverse/tests'...
Compiling './lib/python3.5/site-packages/underverse/tests/find_tests.py'...
***   File "./lib/python3.5/site-packages/underverse/tests/find_tests.py", line 492
    print msg.m.len()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/underverse/tests/kv_test.py'...
***   File "./lib/python3.5/site-packages/underverse/tests/kv_test.py", line 20
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/underverse/tests/load_tests.py'...
***   File "./lib/python3.5/site-packages/underverse/tests/load_tests.py", line 35
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/underverse/tests/speed_test.py'...
***   File "./lib/python3.5/site-packages/underverse/tests/speed_test.py", line 33
    print "%s - %0.5f elapsed" % (p, clock() - start)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/underverse/tests/test_data_gen.py'...
***   File "./lib/python3.5/site-packages/underverse/tests/test_data_gen.py", line 64
    print p.__dict__
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/underverse-0.4.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
